--- a/Generate_C_Code/RNN_Generate_C_Code.ipynb
+++ b/Generate_C_Code/RNN_Generate_C_Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d3633148",
+   "id": "9b886574",
    "metadata": {},
    "source": [
     "# Text generation using RNN - Character Level\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d74f7c7",
+   "id": "ff8662cd",
    "metadata": {},
    "source": [
     "# Notebook Overview\n",
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d5089386",
+   "id": "62c93186",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab94fcd6",
+   "id": "c1fb48cc",
    "metadata": {},
    "source": [
     "# 1. Preprocess data"
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9f999d0",
+   "id": "25725ab7",
    "metadata": {},
    "source": [
     "We're going to build a C code generator by training an RNN on a huge corpus of C code (the linux kernel code). You can download the C code used as source text from the following link:\n",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78db2ab1",
+   "id": "eb41f4e2",
    "metadata": {},
    "source": [
     "## Load C code"
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "436f23d0",
+   "id": "68532c60",
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "15d92e03",
+   "id": "a41170e0",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "afec26b5",
+   "id": "b95ddb99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "fa726bbe",
+   "id": "a8493ce6",
    "metadata": {},
    "outputs": [
     {
@@ -1316,7 +1316,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "51b90e14",
+   "id": "4e7ea7b0",
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "177260da",
+   "id": "f9933db7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1347,7 +1347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "294f5fc3",
+   "id": "9b72907d",
    "metadata": {},
    "source": [
     "## Convert characters to integers"
@@ -1356,7 +1356,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "59afe4df",
+   "id": "6c3c293f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1369,7 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "cdfe4979",
+   "id": "14197e0f",
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeed5b8d",
+   "id": "ee7f9d73",
    "metadata": {},
    "source": [
     "## Divide data in input (X) and output (y)"
@@ -1394,7 +1394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "001c975c",
+   "id": "9221cc20",
    "metadata": {},
    "source": [
     "### Create sequences"
@@ -1403,7 +1403,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "9cfb69ee",
+   "id": "3a8994d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1423,7 +1423,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "e67f7aa0",
+   "id": "3497b7c1",
    "metadata": {},
    "outputs": [
     {
@@ -1440,7 +1440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e43ba00f",
+   "id": "4f0d845d",
    "metadata": {},
    "source": [
     "## Create input and output using the created sequences\n",
@@ -1451,15 +1451,15 @@
     "\n",
     "![Tensor shape](./jupyter resources/rnn_tensor.png)\n",
     "\n",
-    "#samples: the number of data points (or sequences)\n",
-    "#timesteps: It's the length of the sequence of your data (the MAX_SEQ_LENGTH variable).\n",
-    "#features: Number of features depends on the type of problem. In this problem, #features is the vocabulary size, that is, the dimensionality of the one-hot encoding matrix using which each character is being represented. If you're working with **images**, features size will be equal to: (height, width, channels), and the input shape will be (#training_samples, #timesteps, height, width, channels)"
+    "- samples: the number of data points (or sequences)\n",
+    "- timesteps: It's the length of the sequence of your data (the MAX_SEQ_LENGTH variable).\n",
+    "- features: Number of features depends on the type of problem. In this problem, #features is the vocabulary size, that is, the dimensionality of the one-hot encoding matrix using which each character is being represented. If you're working with **images**, features size will be equal to: (height, width, channels), and the input shape will be (#training_samples, #timesteps, height, width, channels)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "adfffe1f",
+   "id": "33b97285",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1475,7 +1475,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "ad3a2371",
+   "id": "960a7e30",
    "metadata": {},
    "outputs": [
     {
@@ -1494,7 +1494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e85e234b",
+   "id": "a9ff2cce",
    "metadata": {},
    "source": [
     "Here, X is reshaped to (#samples, #timesteps, #features). We have explicitly mentioned the third dimension (#features) because we won't use the Embedding() layer of Keras in this case since there are only 97 characters. Characters can be represented as one-hot encoded vector. There are no word embeddings for characters."
@@ -1502,7 +1502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "012ab598",
+   "id": "e1aac1ca",
    "metadata": {},
    "source": [
     "# 2. LSTM"
@@ -1511,7 +1511,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "0ccbfda1",
+   "id": "531153c1",
    "metadata": {},
    "outputs": [
     {
@@ -1538,7 +1538,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "a2373b44",
+   "id": "f35bbfda",
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "4f2833cd",
+   "id": "214bf533",
    "metadata": {},
    "outputs": [
     {
@@ -1638,7 +1638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d927aaba",
+   "id": "7a88ad69",
    "metadata": {},
    "source": [
     "# 3. Generate code"
@@ -1646,7 +1646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ba8f88d",
+   "id": "cb4ef05d",
    "metadata": {},
    "source": [
     "Create a function that will make next character predictions based on temperature. If temperature is greater than 1, the generated characters will be more versatile and diverse. On the other hand, if temperature is less than one, the generated characters will be much more conservative."
@@ -1655,7 +1655,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "9442bd3f",
+   "id": "eec12313",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1672,7 +1672,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "42470a91",
+   "id": "899bdc7d",
    "metadata": {},
    "outputs": [
     {
@@ -1694,7 +1694,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "a8c55ad4",
+   "id": "e4dc8bde",
    "metadata": {},
    "outputs": [
     {
@@ -1881,7 +1881,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "7fb4351c",
+   "id": "b832da9b",
    "metadata": {},
    "outputs": [
     {
@@ -2080,7 +2080,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3fc2b37",
+   "id": "9caf7243",
    "metadata": {},
    "outputs": [],
    "source": []
